# tun2proxy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/tun2proxy-cli/: Cargo.toml
crates/tun2proxy-cli/src/: main.rs
crates/tun2proxy-core/: Cargo.toml  README.md
crates/tun2proxy-core/src/: lib.rs  relay.rs  session.rs  sniff.rs  stack.rs  tun.rs
crates/tun2proxy-core/tests/: loopback.rs
crates/tun2proxy-proxy/: Cargo.toml  README.md
crates/tun2proxy-proxy/src/: lib.rs
docs/: PRD.md  ROADMAP.md  TODO.md
